CHANGELOG
===========
cody - created project
sam - created tasks model
sam - updated homepage to include remaining tasks and the table to tasks
cody - Created the views/ Job 3
sam - created maintenance page
cody - completed task 5
sam - paginated the maintenence