@@ -17,3 +17,4 @@ application/logs/*
 /vendor/
 /nbproject/private/
 /nbproject/
+/tmp/*
